<resources>
    <string name="app_name">Insurance</string>
    <string name="program_name">Insurance</string>
    <string name="registration_window">Войти в систему</string>
    <string name="entry_field_name">имя</string>
    <string name="entry_field_password">пароль</string>
    <string name="button_login">Войти</string>
    <string name="button_view_agents">Посмотреть агентов</string>
    <string name="button_add_agents">Добавить агента</string>
    <string name="entry_field_login_agent">логин агента</string>
    <string name="entry_field_password_agent">пароль агента</string>
    <string name="button_login_agent">Зарегестрировать агента</string>
    <string name="button_insure_cars">Застраховать машину</string>
    <string name="button_insure_houses">Застраховать дом</string>
    <string name="entry_field_name_car">марку авто</string>
    <string name="entry_purchase_date">Дата получения прав</string>
    <string name="button_insure_cars_price">Узнать цену</string>
    <string name="entry_field_house_address">Адрес дома</string>
    <string name="text_view_list_agents">Список агентов</string>
    <string name="text_view_insured">Застраховано:</string>
    <string name="button_change">Изменить</string>
    <string name="button_delete">Удалить</string>
    <string name="entry_field_change_name">Изменить логин</string>
    <string name="entry_field_change_password">Изменить пароль</string>
    <string name="entry_field_id_agent">Id агента</string>
    <string name="entry_field_surname_agent">Фамилию агента</string>
    <string name="entry_field_name_agent">Имя агента</string>
    <string name="entry_field_patronymic_agent">Отчество агента</string>
    <string name="entry_field_password_adain_agent">Повторите пароль</string>
    <string name="entry_field_name_owner">имя владельца</string>
    <string name="entry_field_surname_owner">фамилию владельца</string>
    <string name="entry_field_patronymic_owner">отчество владельца</string>
    <string name="entry_field_passport_date">номер паспорта</string>
    <string name="entry_field_car_number">номера автомобиля</string>
    <string name="entry_field_car_power">мощность автомобиля</string>
    <string name="entry_field_discount_car">скидку (%)</string>
    <string name="entry_field_house_size">размер квартиры</string>
    <string name="entry_field_celling_height">Высота потолка</string>
    <string name="entry_field_street_house">Улица</string>
    <string name="entry_field_number_house">Дом</string>
    <string name="entry_field_floor_house">Этаж</string>
    <string name="entry_field_apartment_number">Номер квартиры</string>
    <string name="entry_field_apartment_number_house">Квартира</string>
</resources>