<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgentRegistration">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent='true'
        android:layout_centerHorizontal="true"
        android:layout_margin="25dp"
        android:gravity="center"
        android:orientation="vertical">


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/idAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_field_id_agent"
            android:inputType="number"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/nameAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_field_name_agent"
            android:inputType="text"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/surnameAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_field_surname_agent"
            android:inputType="text"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/patronymicAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_field_patronymic_agent"
            android:inputType="text"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/loginAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_field_login_agent"
            android:inputType="text"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>


        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_field_password_agent"
            android:inputType="text"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/passwordAgainAgent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/entry_field_password_adain_agent"
            android:inputType="text"
            android:text=""
            android:textColor="@color/design_default_color_primary"
            android:textColorHint="@color/design_default_color_primary_dark"
            android:textSize="20sp"

            app:met_baseColor="#0056d3"
            app:met_floatingLabel="highlight"
            app:met_primaryColor="#982360"
            app:met_singleLineEllipsis="true">

        </com.rengwuxian.materialedittext.MaterialEditText>

        <Button
            android:id="@+id/button_register_agent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_style"
            android:text="@string/button_login_agent"
            android:textColor="@color/white">

        </Button>


    </LinearLayout>

</RelativeLayout>