<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarInsurance">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:layout_above="@+id/button_get_price_car"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/ownerNameCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_field_name_owner"
                android:inputType="textPersonName"
                android:text=""
                android:layout_weight="1"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>



            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/surnameOwnerCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_field_surname_owner"
                android:inputType="text"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/patronymicOwnerCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_field_patronymic_owner"
                android:layout_weight="1"
                android:inputType="text"
                android:text=""
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/purchaseDateCar"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:hint="@string/entry_purchase_date"
                android:inputType="date"
                android:text=""
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/passportDateCar"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/entry_field_passport_date"
                android:inputType="number"
                android:text=""
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_maxCharacters="10"
                app:met_minCharacters="10"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/carName"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/entry_field_name_car"
                android:inputType="text"
                android:text=""
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>


            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/carNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/entry_field_car_number"
                android:inputType="text"
                android:text=""
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_maxCharacters="6"
                app:met_minCharacters="6"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/powerCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_field_car_power"
                android:inputType="number"
                android:layout_weight="1"
                android:text=""
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>

            <com.rengwuxian.materialedittext.MaterialEditText
                android:id="@+id/discountCar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/entry_field_discount_car"
                android:inputType="number"
                android:text=""
                android:layout_weight="1"
                android:textColor="@color/design_default_color_primary"
                android:textColorHint="@color/design_default_color_primary_dark"
                android:textSize="20sp"

                app:met_baseColor="#0056d3"
                app:met_floatingLabel="highlight"
                app:met_primaryColor="#982360"
                app:met_singleLineEllipsis="true">

            </com.rengwuxian.materialedittext.MaterialEditText>


        </LinearLayout>


    </ScrollView>

    <Button
        android:id="@+id/button_get_price_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/button_style"
        android:text="@string/button_insure_cars_price"
        android:textColor="@color/white">

    </Button>

</RelativeLayout>